# stf_ai_diagnosis_platform_v1

./: .dockerignore  .gitattributes  .gitignore  CLAUDE.md  OVERVIEW.md  README.md  TEST_COMMIT.md  commit_msg.txt
diagnostic_api/: Dockerfile  requirements.txt
dify/: Auto Diagnosis Expert.yml  OBD Log Diagnosis Expert.yml  diagnosis_workflow.yml  manual_workflow_instructions.md
doc/: architecture.html  design_doc.md  dev_plan.md  schema.html
docs/: RAG_ingestion_pipeline.html  SECURITY_BASELINE.md  database_schema.md  deployment_polyu.md  design_doc.md  dev_plan.md  harness_14_phase5_baseline.md  harness_14_phase6_baseline.md  harness_14_phase6_followups.md  harness_21_phase5_baseline.md  manual_index_spec.md  manual_markdown_schema.md  preprocessing_rationale.md  schema.html  v2_design_doc.md  v2_dev_plan.md
infra/: .env.example  .env.polyu.example  BROWSER_DEBUG_STEPS.md  DEPLOYMENT_SUMMARY.md  DIFY_CREDENTIALS.md  DIFY_TROUBLESHOOTING.md  Makefile  QUICK_REFERENCE.md  README_LOCAL_SETUP.md  README_OBD_AGENT_SETUP.md  STARTUP_SUCCESS.md  (+22 more)
obd_agent/: .dockerignore  .env.example  Dockerfile  __init__.py  __main__.py  agent_loop.py  anomaly_detector.py  api_poster.py  clue_generator.py  config.py  format_normalizer.py  jetson_uploader.py  log_parser.py  log_summarizer.py  pyproject.toml  requirements-sim.txt  requirements.txt  schemas.py  snapshot_builder.py  statistics_extractor.py  summary_formatter.py  time_series_normalizer.py
obd_agent/fixtures/: csvlog_sample.csv  maxlog_sample.csv  obd_log_20250723_144216.summary.json  obd_log_20250723_144216.txt  obd_log_20260203_163503.parsed_summary_golden.json  obd_log_20260203_163503.txt  obd_log_20260203_163503.v2_golden.json  obd_snapshot.sample.json  simulation_scenarios.json  yamaha_dual_road_test_20260508.csv  yamaha_dual_sample.csv
obd_agent/reader/: __init__.py  base.py  live.py  simulation.py
obd_agent/rules/: diagnostic_rules.yaml
obd_agent/tests/: conftest.py  test_agent_loop.py  test_anomaly_detector.py  test_api_poster.py  test_clue_generator.py  test_format_normalizer.py  test_jetson_uploader.py  test_log_parser.py  test_log_summarizer.py  test_schemas.py  test_simulation_reader.py  test_snapshot_builder.py  test_statistics_extractor.py  test_summary_formatter.py  test_time_series_normalizer.py
(+348 files in other folders)
