# TODO: Add author, license, readme, and repository URL metadata.
# TODO: Add optional dev/test dependencies (pytest, pytest-asyncio, mypy).

[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "obd_agent"
version = "0.1.0"
description = "OBD-II telemetry collector and log summariser"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.5",
    "pandas>=2.1",
    "numpy>=1.26",
]

[tool.setuptools]
packages = ["obd_agent", "obd_agent.reader"]

[tool.setuptools.package-dir]
obd_agent = "."
"obd_agent.reader" = "reader"
