# TODO: Add author, license, readme, and repository URL metadata.
# TODO: Add optional dev/test dependencies (pytest, pytest-asyncio, mypy).

[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "obd_agent"
version = "0.2.0"
description = "OBD-II log analysis library and end-of-trip upload client"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.5",
    "pandas>=2.1",
    "numpy>=1.26",
    "ruptures>=1.1.8",
    "scikit-learn>=1.3",
    "pyyaml>=6.0",
    "httpx>=0.26",
]

[tool.setuptools]
packages = ["obd_agent", "obd_agent.rules"]

[tool.setuptools.package-dir]
obd_agent = "."
"obd_agent.rules" = "rules"

[tool.setuptools.package-data]
"obd_agent.rules" = ["*.yaml"]
